# Emergence

./: .gitignore  CMakeLists.txt  readme.md
Client/: CMakeLists.txt
Client/src/: Client.cpp  Client.hpp  Game.cpp  Game.hpp  main.cpp
Server/: CMakeLists.txt
Server/src/: Game.cpp  Game.hpp  Server.cpp  Server.hpp  main.cpp
api/: Connection.cpp  Connection.hpp  GameStructures.hpp  Globals.hpp  Logger.cpp  Logger.hpp  PlatformDetection.hpp  Player.cpp  Player.hpp  Protocol.hpp  Socket.cpp  Socket.hpp  Utils.hpp  World.cpp  World.hpp
api/app/: GameStructures.hpp  Messenger.hpp  Player.hpp  World.hpp
api/core/: Connection.cpp  Connection.hpp  Globals.hpp  Logger.cpp  Logger.hpp  Protocol.hpp  Socket.cpp  Socket.hpp  Task.hpp
client/: CMakeLists.txt  pch.hpp
client/src/: Client.cpp  Client.hpp  Game.cpp  Game.hpp  main.cpp
client/src/rendering/: 30_multisampling.cpp  30_multisampling.hpp  Renderer.hpp
client/src/rendering/devices/: Instance.hpp  PhysicalDevice.hpp  Surface.hpp
server/: CMakeLists.txt  pch.hpp
server/src/: Game.cpp  Game.hpp  Server.cpp  Server.hpp  main.cpp
